# net-esolid

./: .gitignore  CMakeLists.txt
src/: net-esolid.cc
src/esolid/: Makefile  test.sh
src/esolid/bez/: cyl7.bez
src/esolid/include/: bigrational.h  genbox.h  kpoint2d.h
src/esolid/main/: esolid_main.cc
src/esolid/output/: D_boxinp2_boxinp5.bez  D_boxinp3_boxinp5.bez  D_boxinp4_boxinp5.bez  D_boxinp5_boxinp2.bez  D_boxinp6_boxinp5.bez  D_cylinp10_boxinp5.bez  D_cylinp10_cylinp5.bez  D_cylinp3_cylinp5.bez  I_boxinp2_boxinp5.bez  I_boxinp3_boxinp5.bez  I_boxinp4_boxinp5.bez  I_boxinp5_boxinp2.bez  I_boxinp6_boxinp5.bez  I_cylinp10_boxinp5.bez  I_cylinp10_cylinp5.bez  I_cylinp3_cylinp5.bez  U_boxinp2_boxinp5.bez  U_boxinp3_boxinp5.bez  U_boxinp4_boxinp5.bez  U_boxinp5_boxinp2.bez  U_boxinp6_boxinp5.bez  U_cylinp10_boxinp5.bez  U_cylinp10_cylinp5.bez  U_cylinp3_cylinp5.bez
src/esolid/src/: bigint.cc  bigint_matrix.cc  bigint_vector.cc  bigrational.cc  bigrational_matrix.cc  bigrational_vector.cc  fpfilter.cc  genbox.cc  kboxco2.cc  kcurve.cc  kfloatpoly.cc  kpartition.cc  kpatch.cc  kpoint1d.cc  kpoint2d.cc  kratpoly.cc  ksegment.cc  ksurf.cc  root1.cc
